[fix] handles additional tools overflow.
Makes additional tools dropdown scrollable.

--- a/frontend/src/app/components/Review/Review.scss
+++ b/frontend/src/app/components/Review/Review.scss
@@ -31,6 +31,11 @@
     overflow: hidden;
   }
 
+  .additional-tools-menu {
+    max-height: 75vh;
+    overflow: auto;
+  }
+
   span.highlight-1 {
     text-decoration: underline;
   }
